chore: Reduce code to only work with data we need